DD-406: Add EwdsTradeDto and use it in the ewds_handler; Adapt and rename TradeSchema
