# gsy-offchain-storage/src/routes/trades.rs
@@ -4,11 +4,11 @@ use actix_web::web::Query;
 use actix_web::{web::Json, HttpResponse, Responder};
 use mongodb::bson::Bson;
 use primitives::db_api_schema::orders::OrderStatus;
-use primitives::db_api_schema::trades::TradeSchema;
+use primitives::db_api_schema::trades::DbTradeSchema;
 use serde::Deserialize;
 
 #[tracing::instrument(name = "Adding new trades", skip(db), fields(trades = ?trades))]
-pub async fn post_trades(trades: Json<Vec<TradeSchema>>, db: DbRef) -> impl Responder {
+pub async fn post_trades(trades: Json<Vec<DbTradeSchema>>, db: DbRef) -> impl Responder {
     for trade in trades.iter() {
         let bid_id = Bson::String(trade.bid_hash.clone());
         let offer_id = Bson::String(trade.offer_hash.clone());
@@ -30,7 +30,7 @@ pub async fn post_trades(trades: Json<Vec<TradeSchema>>, db: DbRef) -> impl Resp
     }
 }
 
-pub async fn post_normalized_trades(trades: Json<Vec<TradeSchema>>, db: DbRef) -> impl Responder {
+pub async fn post_normalized_trades(trades: Json<Vec<DbTradeSchema>>, db: DbRef) -> impl Responder {
     post_trades(trades, db).await
 }
 
