# primitives/src/db_api_schema/trades.rs
@@ -1,14 +1,15 @@
 #![allow(non_snake_case)]
 
-use crate::db_api_schema::orders::DbOrderSchema;
 use serde::{Deserialize, Serialize};
 
 /// Trade status
 #[derive(Serialize, Deserialize, Debug, Clone, PartialEq)]
 #[serde(rename_all = "lowercase")]
 pub enum TradeStatus {
+    Matched,
     Executed,
     Settled,
+    Rejected,
 }
 
 #[derive(Serialize, Deserialize, Debug, Clone, PartialEq)]
@@ -18,7 +19,7 @@ pub struct TradeParameters {
 }
 
 #[derive(Serialize, Deserialize, Debug, Clone, PartialEq)]
-pub struct TradeSchema {
+pub struct DbTradeSchema {
     pub trade_uuid: String,
     pub status: TradeStatus,
     pub seller: String,
@@ -26,20 +27,16 @@ pub struct TradeSchema {
     pub market_id: String,
     pub time_slot: u64,
     pub creation_time: u64,
-    pub offer: DbOrderSchema,
     pub offer_hash: String,
-    pub bid: DbOrderSchema,
     pub bid_hash: String,
     #[serde(default)]
     pub residual_offer_id: Option<String>,
     #[serde(default)]
     pub residual_bid_id: Option<String>,
-    pub residual_offer: Option<DbOrderSchema>,
-    pub residual_bid: Option<DbOrderSchema>,
     pub parameters: TradeParameters,
 }
 
-impl TradeSchema {
+impl DbTradeSchema {
     pub fn eq(&self, other: &Self) -> bool {
         self.trade_uuid == other.trade_uuid
     }
@@ -73,33 +70,6 @@ pub struct MarketRoleSchema {
     pub assigned_to: Vec<String>,
 }
 
-#[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq)]
-#[serde(rename_all = "lowercase")]
-pub enum IntelligentTradeStatus {
-    Matched,
-    Executed,
-    Settled,
-    Rejected,
-}
-
-#[derive(Serialize, Deserialize, Debug, Clone, PartialEq)]
-#[serde(rename_all = "camelCase")]
-pub struct IntelligentTradeSchema {
-    pub trade_id: String,
-    pub market_id: String,
-    pub bid_id: String,
-    pub buyer_id: String,
-    #[serde(default)]
-    pub residual_bid_id: Option<String>,
-    pub offer_id: String,
-    pub seller_id: String,
-    #[serde(default)]
-    pub residual_offer_id: Option<String>,
-    pub trade_status: IntelligentTradeStatus,
-    pub trade_quantity: f64,
-    pub trade_price: f64,
-    pub traded_at: String,
-}
 
 #[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq)]
 pub enum IntelligentClearingStatus {
